# code-snippets

./: .gitignore  .jshintrc  LICENSE  README.md  index.html  params.json
cURL/: deleteRecipientList.txt  deleteSuppressionlistByEmail.txt  getMetricsCountOfDeliveriesGroupedByAttempt.txt  getMetricsDataForKnownCampaigns.txt  getMetricsDataForKnownDomains.txt  getMetricsDeliverabilityByCampaign.txt  getMetricsDeliverabilityByDomain.txt  getMetricsDeliverabilityLinks.txt  getMetricsDeliverabilitySummary.txt  getMetricsOrderedByTimeSeries.txt  getMetricsSpecificToBounceEventsGroupedByBounceClassification.txt  getMetricsSpecificToBounceEventsGroupedByBounceReason.txt  getMetricsSpecificToDelayEventsGroupedByDelayReasons.txt  getMetricsSpecificToEngagementEventsGroupedByLinkName.txt  getMetricsSpecificToRejectionEventsGroupedByRejectionReasons.txt  getRecipientLists.txt  getSuppressionList.txt  getSuppressionListCheckRecipientSuppressionStatus.txt  postRecipientList.txt  postTransmission.txt  postTransmissionWithTemplate.txt  putSuppressionList.txt  putSuppressionListByRecipient.txt
docs/: ADDING_ISSUES.markdown  CONTRIBUTING.markdown
elixir/myapp/: README.md  mix.exs
gists/: README.md
javascripts/webhook-table/: fetch.js
snippets/: README.md  includeSparkPostNodeSDK.txt
snippets/SMTP/: smtp_example.cs  smtp_example.js  smtp_example.php  smtp_example.pl  smtp_example.py
snippets/recipient-validation/rust_recipient_validation/: Cargo.toml
snippets/recipient-validation/rust_recipient_validation/src/: main.rs
sparkpost-api-curl-examples/: post-transmission.txt
(+27 files in other folders)
