[package]
# names should be snake_case according to what i can find here https://doc.rust-lang.org/1.0.0/style/style/naming/README.html
name = "rust_recipient_validation"
version = "0.1.0"
authors = ["tuck1s <steve.tuck@sparkpost.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json", "blocking"] }
tokio = { version = "0.2", features = ["full"] }
hyper = "0.14"
